--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -30,7 +31,6 @@
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "prisma": "^5.12.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "engines": {
